# miso-occ

./: .gitignore  README.md
client/: README.md  default.nix  developClient.sh  occ.cabal  runServer.sh  symlink.sh
client/client/: OCC.hs  OccDesk.hs
client/client/Widgets/: Menu.md
client/static/: app.html  chat.css  index.html  my.js  occ.css
